--- a/src/styles/MyCareer.css
+++ b/src/styles/MyCareer.css
@@ -4,6 +4,7 @@
   position: relative;
   overflow: hidden;
   padding: 4rem 2rem;
+  padding-top: 6rem;
 }
 
 .MyCareer::before {
@@ -494,5 +495,6 @@
 
   .MyCareer {
     padding: 2rem 1rem;
+    padding-top: 5rem;
   }
 }
